# FLAb

./: README.md  filter_expression_data.py  main.py  pyproject.toml
data/: fewshot_eligible_datasets.csv  flab_metadata.csv
data/FLAb_0/: FLAb1_paper_table1.csv  FLAb1_paper_table1_structure_used.csv  FLAb1_structure_used_csv_check.csv  FLAb1_table_data_structure_verify.csv
data/FLAb_0/aggregation/: Untitled  Wittrup2017_CST_ACSINS.csv  Wittrup2017_CST_CSI.csv  Wittrup2017_CST_HIC.csv  Wittrup2017_CST_SAS.csv  Wittrup2017_CST_SGAC.csv  Wittrup2017_CST_SMAC.csv
data/FLAb_0/binding/: Hie2022_C143_Kd.csv  Hie2022_MEDI8852UCA_Kd.csv  Hie2022_MEDI8852_Kd.csv  Hie2022_REGN10987_Kd.csv  Hie2022_S309_Kd.csv  Hie2022_mAb114_Kd.csv  Rosace2023_Adalimumab_Kd.csv  Rosace2023_CR3022_Kd.csv  Rosace2023_Golimumab_Kd.csv  Shanehsazzadeh2023_trastuzumab_multi_kd.csv  Shanehsazzadeh2023_trastuzumab_zero_kd.csv  Warszawski2019_d44_Kd.csv  gsk2023_AM14_Kd.csv  gsk2023_D25_Kd.csv  gsk2023_MOTA_Kd.csv  gsk2023_RSB1_Kd.csv
data/FLAb_0/cst/: clinicalStageTheraAbs.csv
data/binding/: README.md
envs/antiberty/: pyproject.toml
envs/antiberty/antiberty/: __init__.py
examples/: FLAb_example_IgLM_Expression.ipynb  run_score_seq.sh  run_score_struc.sh
sbatch/: score_seq.sh  score_seq_cpu.sh  score_struc.sh  score_struc_cpu.sh
scripts/: analyze_abeval_all_tasks.py  analyze_abeval_str_vs_nostr.py  analyze_all_poet2_tm_results.py  analyze_memory_usage.py  analyze_model_correlations.py  check_and_analyze.sh  check_model_memory.py  check_poet2_checkpoints.py  check_test_environments.py  cleanup_tmp_checkpoints.py  compare_pll_vs_confidence.py  compare_scores.py  eval_fewshot.py  eval_flab1.py  extract_embeddings.py  extract_onehot_features.py  generate_all_poet2_sbatch.py  generate_fewshot_datasets.py  models.py  predict_structures_chai.py  predict_structures_chai_batch.py  process_ginkgo_data.py  process_naturalantibody_abdesign.py  process_naturalantibody_therapeutics.py  quick_test_all_models.sh  reproduce_antiberty_scores.py  score_antiberty.py  score_seq.py  score_struc.py  test_dual_gpu.py  test_poet2_pll_fix.py  train_fewshot.py  verify_flab_correspondence.py
(+1466 files in other folders)
