[project]
name = "flab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ablang2>=0.2.1",
    "antiberty>=0.1.3",
    "fair-esm>=2.0.0",
    "igfold>=0.4.0",
    "iglm>=0.1.0",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.37.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.uv.extra-build-dependencies]
torch-sparse = ["torch"]
torch-geometric = ["torch"]
