[project]
name = "flab-antiberty-env"
version = "0.1.0"
description = "AntiBERTy environment dependencies"
requires-python = ">=3.10,<3.11"
dependencies = [
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "cmake==3.26.3",
    "filelock==3.12.0",
    "fsspec==2023.4.0",
    "huggingface-hub==0.14.1",
    "idna==3.4",
    "jinja2==3.1.2",
    "lit==16.0.2",
    "markupsafe==2.1.2",
    "mpmath==1.3.0",
    "networkx==3.1",
    "numpy==1.24.3",
    "nvidia-cublas-cu11==11.10.3.66",
    "nvidia-cuda-cupti-cu11==11.7.101",
    "nvidia-cuda-nvrtc-cu11==11.7.99",
    "nvidia-cuda-runtime-cu11==11.7.99",
    "nvidia-cudnn-cu11==8.5.0.96",
    "nvidia-cufft-cu11==10.9.0.58",
    "nvidia-curand-cu11==10.2.10.91",
    "nvidia-cusolver-cu11==11.4.0.1",
    "nvidia-cusparse-cu11==11.7.4.91",
    "nvidia-nccl-cu11==2.14.3",
    "nvidia-nvtx-cu11==11.7.91",
    "packaging==23.1",
    "pyyaml==6.0",
    "regex==2023.5.4",
    "requests==2.30.0",
    "sympy==1.11.1",
    "tokenizers==0.13.3",
    "torch==2.0.0",
    "tqdm==4.65.0",
    "transformers==4.28.1",
    "triton==2.0.0",
    "typing-extensions==4.5.0",
    "urllib3>=2.0.2",
    # スクリプト実行に必要な依存関係
    "pandas",
    "matplotlib",
    "scipy",
    "seaborn",
    # AntiBERTyライブラリ - GitHubからインストールが必要な場合
    # "antiberty @ git+https://github.com/...",
    "antiberty>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["antiberty"]

